Fixed the Specifications and added test for getLessonById but test doesnt work yet.